<resources>
    <string name="app_name">Boha</string>
    <string name="ha_olvidado_su_contrase_a">Ha Olvidado su Contraseña?</string>
    <string name="boha">Boha</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="google">Google</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="no_tienes_una_cuenta">No tienes una Cuenta?</string>
    <string name="o_iniciar_sesion_con">O Iniciar Sesion con:</string>
    <string name="o_registrarse_con">O Registrarse Con:</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="numero_de_tel_fono">Numero de Teléfono</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="ingrese_los_datos_del_usuario">Ingrese los Datos del Usuario</string>
    <string name="direccion">Direccion</string>
    <string name="combos">Combos</string>
    <string name="inicio">Inicio</string>
    <string name="reservas">Reservas</string>
    <string name="pedidos">Pedidos</string>
    <string name="perfil">Perfil</string>
    <string name="menu_lateral">Menu Lateral</string>
    <string name="promociones">Promociones</string>
    <string name="comidas">Comidas</string>
    <string name="viandas">Viandas</string>
    <string name="title_activity_menu_inicio">MenuInicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Boha Restaurant</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bottom_navigation">bottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_inicio_principal">InicioPrincipalActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>